# filetools

./: .gitignore  .goreleaser.yml  .travis.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTES.md  README.md  doc.go  go.mod  go.sum  proto.mk  report.html
.github/: dependabot.yml
.github/workflows/: ci.yaml  codeql.yml  security-audit.yaml
cmd/cleanup/: Dockerfile  Dockerfile.windows  cleanup.go
cmd/rmlist/: Dockerfile  Dockerfile.windows  rmlist.go  rmlist_test.go
cmd/similar/: Dockerfile.windows  similar.go  similar_test.go
cmd/treemap/: Dockerfile  Dockerfile.windows  treemap.go  treemap_test.go
cmd/unique/: Dockerfile  Dockerfile.windows  unique.go  unique_test.go
cmd/unique2/: Dockerfile  Dockerfile.windows  unique2.go  unique2_test.go
internal/: appmain.go  cleanup.go  doc.go  hash.go  hash_test.go  measure.go  measure_test.go  metrics.go  metrics_test.go  multiwalk.go  multiwalk_test.go  perf.go  report.go  report.html  similar.go  similar_test.go  status.go  unique.go  unique_test.go  util.go  util_test.go  workqueue.go  workqueue_test.go
internal/core/: logging.go
internal/htmltemplate/: html.go  html_test.go  svg.html
internal/indexer/: db.go  indexer.go  indexer_test.go
internal/localfs/: file.go  file_test.go  path.go  path_test.go  walk.go  walk_test.go
internal/metadata/: metadata.go  metadata_test.go
internal/metadata/proto/: metadata.pb.go  metadata.proto
internal/metadata/testdata/: testfile.tar  testfile.txt.txt
internal/rmlist/: rmlist.go  rmlist_test.go
internal/treemap/: treemap.go  treemap_test.go
internal/unique/: params.go  report.go  report_test.go  template_report.html  template_report.txt  test_report.html  test_report.txt  unique.go  unique_test.go
internal/unique/proto/: unique.pb.go  unique.proto
src/: main.rs
src/canonical/: mod.rs
src/checksum/: mod.rs
src/clean_empty_directory/: mod.rs
src/clean_filename/: mod.rs
src/common/: checksum.rs  db.rs  fs.rs  media.rs  mod.rs  progress.rs  thread.rs  util.rs
src/duplicate/: db.rs  mod.rs  pipeline.rs  report.rs
src/duplicate/embed/templates/: duplicate-report.html  rendered.html
src/duplicate/embed/testdata/: test-report.html
src/rmlist/: mod.rs
src/similar_name/: mod.rs
testdata/: testdata.go  testdata_test.go
testdata/examples/: README.md
tidy/: mod.rs
vega/: index.html
