# Copyright 2024 Jeremy Edwards
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "filetool"
version = "0.3.1"
edition = "2021"
authors = ["Jeremy Edwards <1312331+jeremyje@users.noreply.github.com>"]
license = "Apache-2.0"
description = "A tool to manage and cleanup files on your hard drive."
readme = "README.md"
homepage = "https://github.com/jeremyje/filetools"
repository = "https://github.com/jeremyje/filetools"
keywords = ["cli", "file-system", "fs", "cleanup"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-tarpaulin = "0.31.2"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
clap-verbosity-flag = "2.1.0"
concat-string = "1.0.1"
crc = "3.0.1"
crossbeam-channel = "0.5.10"
data-encoding = "2.4.0"
dunce = "1.0.4"
env_logger = "0.11.2"
handlebars = "5.0.0"
humansize = "2.1.3"
indicatif = "0.17.7"
indicatif-log-bridge = "0.2.2"
log = "0.4.20"
more-asserts = "0.3.1"
mp4 = "0.14.0"
phf = { version = "0.11.2", features = ["macros"] }
remove_dir_all = "0.8.2"
ring = "0.17.5"
serde = "1.0.193"
serde_json = "1.0.108"
tempfile = "3.10.0"
threadpool = "1.8.1"
time = "0.3.30"
twox-hash = "1.6.3"

[dev-dependencies]
testfiles = "0.0.4"
