# Copyright 2024 Jeremy Edwards
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "filetool"
version = "0.5.0"
edition = "2021"
authors = ["Jeremy Edwards <1312331+jeremyje@users.noreply.github.com>"]
license = "Apache-2.0"
description = "A tool to manage and cleanup files on your hard drive."
readme = "README.md"
homepage = "https://github.com/jeremyje/filetools"
repository = "https://github.com/jeremyje/filetools"
keywords = ["cli", "file-system", "fs", "cleanup"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-tarpaulin = "0.33.0"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
concat-string = "1.0.1"
crc = "3.3.0"
crossbeam-channel = "0.5.15"
csv = "1.3.1"
data-encoding = "2.9.0"
dunce = "1.0.5"
env_logger = "0.11.8"
handlebars = "6.3.2"
humansize = "2.1.3"
indicatif = "0.18.0"
indicatif-log-bridge = "0.2.3"
log = "0.4.28"
more-asserts = "0.3.1"
mp4 = "0.14.0"
phf = { version = "0.13.1", features = ["macros"] }
remove_dir_all = "1.0.0"
ring = "0.17.14"
serde = "1.0.228"
serde_json = "1.0.145"
tempfile = "3.23.0"
threadpool = "1.8.1"
time = "0.3.44"
twox-hash = "2.1.2"

[dev-dependencies]
testfiles = "0.0.4"
